localFilename is not used for put. hide it

--- a/ftp.html
+++ b/ftp.html
@@ -143,7 +143,7 @@
         } else if (id == 'put') {
           filename.show();
           savedir.hide();
-          localFilename.show();
+          localFilename.hide();
         } else if (id =='get') {
           filename.show();
           savedir.show();
